clang/test/BSC/Positive/Generic/Typealias/typealias_in_function_body/typealias_in_function_body.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

typedef MyInt = int;
typedef MyType<T> = T;

void foo1() {
    MyInt a = 5;
    MyType<int> c = 5;
    
    typedef MyInt1 = int;
    MyInt1 b = 5;
}

void foo2<T>() {
    MyInt a = 5;
    MyType<T> b = 5;
    MyType<int> c = 5;    
    
    typedef MyInt1 = int;
    typedef MyType1 = T;
    MyInt1 d = 5;
    MyType1 e = 5;
}

int main() {
    foo1();
    foo2<int>();
    return 0;
}