clang/test/BSC/Negative/Generic/StructAndFunction/generic_function_call_another_generic_function/generic_function_call_another_generic_function.cbs
// RUN: %clang_cc1  -verify %s
// expected-no-diagnostics

T bar1<T> (T a) {
    return a;
}

T bar2<T> (T a) {
    T b = bar1<T>(a);
    return b;
}

void bar3<T> () {}

void bar4<T1, T2> () {}

void spawn_on<T>(){
    T c;
    T d = bar1<T>(c);
    T e = bar2<T>(c);
    bar3<T>();
    bar4<T, T>();
}

int main() {
    spawn_on<int>();
    return 0;
}

